Update taxi demand prediction notebook with new analysis

--- a/Taxi_Demand_Prediction/taxi_demand_prediction.ipynb
+++ b/Taxi_Demand_Prediction/taxi_demand_prediction.ipynb
@@ -2459,7 +2459,9 @@
    "cell_type": "code",
    "execution_count": 71,
    "id": "f71878c4-d7f4-4d8c-8b0f-dae3d796c7f8",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2559,9 +2561,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c1bf9ed4-dc5c-4e74-9f27-7eab7464fda4",
+   "metadata": {},
+   "source": [
+    "<h3> Smoothing </h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "659a6146-30fd-4ddb-9033-7a45ddd437e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    print(i)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4b7ca68-0200-4f85-97f8-aecb1dc0eb8a",
+   "id": "d9424f50-bff2-47ec-88ff-7d4957a27c7d",
    "metadata": {},
    "outputs": [],
    "source": []
